14_CanaryRelease/networking.k8s.io_v1/deployment-release.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canaryrelease
  labels:
    app: canaryrelease

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canaryrelease-deployment
  namespace: canaryrelease
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: canaryrelease
  template:
    metadata:
      name: canaryrelease
      labels:
        app: canaryrelease
      namespace: canaryrelease
    spec:
      serviceAccountName: canaryrelease-serviceaccount
      containers:
      - image: localhost:5000/canaryapi
        name: canaryrelease
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: canaryrelease-service
  namespace: canaryrelease
spec:
  selector:
    app: canaryrelease
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
  namespace: canaryrelease
spec:
  rules:
  - host: forest.local
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: canaryrelease-service
            port: 
              number: 3000
