14_CanaryRelease/networking.k8s.io_v1/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prodrelease
  labels:
    app: prodrelease

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prodrelease-deployment
  namespace: prodrelease
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: prodrelease
  template:
    metadata:
      name: prodrelease
      labels:
        app: prodrelease
      namespace: prodrelease
    spec:
      serviceAccountName: prodrelease-serviceaccount
      containers:
      - image: localhost:5000/canaryapi
        name: prodrelease
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: prodrelease-service
  namespace: prodrelease
spec:
  selector:
    app: prodrelease
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: prodrelease
spec:
  rules:
  - host: forest.local
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: prodrelease-service
            port:
              number: 3000
